Bug Fix: Shifted Left
- Fixed bug where after buying the call, the call queue UI is shifted to the left

--- a/src/app/components/creator/footer-content/footer-content.component.scss
+++ b/src/app/components/creator/footer-content/footer-content.component.scss
@@ -2,8 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: fit-content;
-  justify-content: center;
+  width:100%;
 }
 
 @media (min-width:300px) {
@@ -29,7 +28,7 @@
 
 app-call-queue-ui {
   height: fit-content;
-  width: 75%;
+  width: 100%;
 }
 
 // @media screen and (min-width: 1401px) {
